load balancer nginx app1 50% / app2 50%

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,11 @@
 events {}
 
 http {
+    resolver 127.0.0.11 valid=10s; # Docker's internal DNS resolver
+
     upstream backend {
-        server app:8080 weight=4;  # 80% traffic
-        server app2:8080 weight=1; # 20% traffic
+        server app1:8080 weight=1;
+        server app2:8080 weight=1;
     }
 
     server {
