--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  app:
+  app1:
     build: .
     ports:
       - "8080:8080"
@@ -43,7 +43,7 @@ services:
     ports:
       - "80:80"
     depends_on:
-      - app
+      - app1
       - app2
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
