--- a/MessageApp/docker-compose.yml
+++ b/MessageApp/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   app1:
-    build: .
+    build: ..
     ports:
       - "8080:8080"
     depends_on:
@@ -26,7 +26,7 @@ services:
       SPRING_JPA_SHOW_SQL: "true"
 
   app2:
-    build: .
+    build: ..
     ports:
       - "8081:8080"
     depends_on:
