--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,20 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock  # Bind Docker socket
 
+  controller: 
+    image: controller
+    build:
+      context: ./Controller
+      dockerfile: Dockerfile
+    ports:
+      - "9798:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    # depends_on:
+    #   - app1
+    #   - app2
+    #   - monitoring
+  
   nginx:
     image: nginx
     ports:
