--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,25 @@ services:
       - app2
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    depends_on:
+      - app1
+      - app2
+      - monitoring
+      - controller
+
+  # Service Grafana
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
 
 volumes:
   postgres_data:
